--- a/views/less/main.less
+++ b/views/less/main.less
@@ -1,7 +1,7 @@
 /* Views */
 @import "views/general";
 @import "views/start";
-@import "views/reanactment";
+@import "views/reenactment";
 @import "views/hire-us";
 @import "views/about";
 @import "views/vikings";
