--- a/views/less/views/about.less
+++ b/views/less/views/about.less
@@ -2,7 +2,7 @@
   .top-section {
     position: relative;
     z-index: -1;
-    .top-section('../img/all-of-us.png');
+    .top-section('../img/skane_banner.jpg');
     .content {
       position: absolute;
       bottom: 9rem;
