--- a/views/less/views/hire-us.less
+++ b/views/less/views/hire-us.less
@@ -1,6 +1,6 @@
 #hire-us {
   .top-section{
-    .top-section('../img/filming.jpg');
+    .top-section('../img/wollin_line.jpg');
     position: relative;
     z-index: -1;
     .content {
