--- a/views/templates/views/hire-us.hbs
+++ b/views/templates/views/hire-us.hbs
@@ -12,13 +12,14 @@
     <section class="hire-section">
       <div class="content">
         <img src="./img/viking-icon.svg"/>
-        <h3>Hire us</h3>
-        <p>Bacon ipsum dolor amet hamburger beribs kevin fatback, rump bresaola filet mignon tongue brisket. 
-          Pig ball tip venison brisket. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
-          turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
-          Sirloin burgdoggen pastrami bacon. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
-          turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
-          Sirloin burgdoggen pastrami bacon.
+        <h3>Dedicated</h3>
+        <p>We believe history is a living thing that needs to be understod in order to fully grasp our own 
+          modern world, culture and society. Providing a captivating and authentic way of portraying 
+          the Vikings our goal is to make this fascinating time period tangible for the broad public. 
+          Everyone involved is truly dedicated and spend hunders of hours training, studying and crafting 
+          clothes and equipment. We put a lot of prestige and effort in historical authenticity and we travel 
+          the world to showcase our skills and recreate the Viking Age society on a full scale. 
+          Meet us and the faces of our remarkable ancestors.
         </p>
         {{> button 
           text='The Vikings' 
@@ -35,6 +36,18 @@
             "url": "./img/profile.jpg", 
             "heading":"Movies",
             "text": "Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback."
+          },
+          { 
+            "url": "./img/music_video.jpg", 
+            "heading":"Music videos",
+            "text": "Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback.",
+            "isVideo": true,
+            "video-id": "mFc_05xzftw"
+          },
+          { 
+            "url": "./img/filming.jpg", 
+            "heading":"Shows",
+            "text": "Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback."
           }
         ]}'
       }}
@@ -43,13 +56,14 @@
     <section class="hire-section">
       <div class="content">
         <img src="./img/viking-icon.svg"/>
-        <h3>Hire us</h3>
-        <p>Bacon ipsum dolor amet hamburger beribs kevin fatback, rump bresaola filet mignon tongue brisket. 
-          Pig ball tip venison brisket. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
-          turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
-          Sirloin burgdoggen pastrami bacon. Venison shankle boudin strip steak porchetta short ribs t-bone short loin 
-          turkey tenderloin cupim. Short ribs pancetta hamburger boudin. Meatball leberkas pork belly brisket biltong. 
-          Sirloin burgdoggen pastrami bacon.
+        <h3>Resume</h3>
+        <p>Skåne lag has a long experience of showcasing and mediating the Viking Age and our resume spans from 
+          educational school events to large scale movie productions and documentaries. As warriors we have fought our way across 
+          many battlefields and taken the lead in battles with hundreds of fearsome warriors infront of the cameras. We have displayed 
+          our fine weaponry skills at several shows and events and we master a broad veriaty fighting techniques. 
+          As craftsmen we have organize workshops and displays the art of crafting historical clothing, dying fabric, forging weapons and making jewelry. 
+          We showcase our work and skills all across the world at a 
+          verity of markets as well as arranging our own encampments. 
         </p>
       </div>
     </section>
@@ -58,6 +72,16 @@
       {{>image-slider
         images= '{
         "images":[
+          { 
+            "url": "./img/aaron_fight.jpg",
+            "heading":"Shows",
+            "text": "Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback."
+          },
+          { 
+            "url": "./img/deatb_of_aaron.jpg",
+            "heading":"Shows",
+            "text": "Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback."
+          },
           { 
             "url": "./img/fighting.jpg", 
             "heading":"Shows",
