--- a/views/templates/views/vikings.hbs
+++ b/views/templates/views/vikings.hbs
@@ -13,53 +13,80 @@
 
         <div class="column">
           <div>
-            <img src="./img/rasmus.jpg"/>
-            <h2>Rasmus Andersson</h2>
+            <img src="./img/linda.jpg"/>
+            <h2>Linda Spanier</h2>
           </div>
 
           <div>
-            <img src="./img/aaron.png"/>
-            <h2>Rasmus Andersson</h2>
+            <img src="./img/dennis.jpg"/>
+            <h2>Dennis Johansson</h2>
           </div>
 
-          <div>
-            <img src="./img/aaron.png"/>
-            <h2>Rasmus Andersson</h2>
+        <div>
+            <img src="./img/emma.jpg"/>
+            <h2>Emma Berntsson Lundberg</h2>
+        </div>
+
+        <div>
+            <img src="./img/micke.jpg"/>
+            <h2>Micke Filur</h2>
+        </div>
+
+        <div>
+            <img src="./img/fredrik_j.jpg"/>
+            <h2>Fredrik Jönsson</h2>
           </div>
+
         </div>
 
         <div class="column">
+          <div>
+            <img src="./img/aaron.png"/>
+            <h2>Aaron Nilsson</h2>
+          </div>
+
+          <div>
+            <img src="./img/rasmus_portrait.jpg"/>
+            <h2>Rasmus Andersson</h2>
+          </div>
+
+          <div>
+            <img src="./img/hellen.jpg"/>
+            <h2>Helen Servin</h2>
+          </div>
+
+          <div>
+            <img src="./img/casper.jpg"/>
+            <h2>Casper Nilsson</h2>
+          </div>
+
+          <div>
+            <img src="./img/henrik.jpg"/>
+            <h2>Henrik Nordholm</h2>
+          </div>
+          
+        </div>
+
+        <div class="column">
+
+          <div>
+            <img src="./img/patrik.jpg"/>
+            <h2>Patrik Jansson</h2>
+          </div>
+
+          <div>
+            <img src="./img/nicolai.jpg"/>
+            <h2>Nicolai Lorich</h2>
+          </div>
+
           <div>
             <img src="./img/jacob.jpg"/>
-            <h2>Rasmus Andersson</h2>
+            <h2>Jacob Pettersson</h2>
           </div>
 
           <div>
-            <img src="./img/aaron.png"/>
-            <h2>Rasmus Andersson</h2>
-          </div>
-
-          <div>
-            <img src="./img/rasmus.jpg"/>
-            <h2>Rasmus Andersson</h2>
-          </div>
-        </div>
-
-        <div class="column">
-
-          <div>
-            <img src="./img/aaron.png"/>
-            <h2>Rasmus Andersson</h2>
-          </div>
-
-          <div>
-            <img src="./img/rasmus.jpg"/>
-            <h2>Rasmus Andersson</h2>
-          </div>
-
-          <div>
-            <img src="./img/aaron.png"/>
-            <h2>Rasmus Andersson</h2>
+            <img src="./img/pernilla.jpg"/>
+            <h2>Pernilla Svensson</h2>
           </div>
         </div>
         
