--- a/views/templates/components/menu.hbs
+++ b/views/templates/components/menu.hbs
@@ -4,7 +4,7 @@
     <nav>
       <ul>
         <li><a href="./index.html">Start</a></li>
-        <li><a href="./reanactment.html">Reanactment</a></li>
+        <li><a href="./reenactment.html">Reenactment</a></li>
         <li><a href="./hire-us.html">Hire Us</a></li>
       </ul>
     </nav>
