--- a/views/templates/components/scripts.hbs
+++ b/views/templates/components/scripts.hbs
@@ -1,2 +1,2 @@
-<script src="./js/main.js"></script>
-<script src="https://www.youtube.com/iframe_api"></script>
+<script async src="./js/main.js"></script>
+<script async src="https://www.youtube.com/iframe_api"></script>
