--- a/views/templates/views/reenactment.hbs
+++ b/views/templates/views/reenactment.hbs
@@ -106,7 +106,7 @@
           from silver, gold and bronze and mighty weapons from iron. Wool and linen is spun and colored using only authentic 
           methods. The colorful yarn is used in tablet weaving, needle binding and for creating clothes. 
           Just as natural as it once was to our ancestors to craft what they needed, just as natural craftsmanship comes to the 
-          reenactment lifestyle and you’ll learn techniques required and used for thousands of years.
+          reenactment lifestyle and you’ll learn techniques used for thousands of years.
         </p>
       </div>
     </section>
