--- a/views/less/view-mixins/text-section.less
+++ b/views/less/view-mixins/text-section.less
@@ -10,6 +10,9 @@
       margin: 0 auto;
     }
     @media (min-width: @screen-l) {
+      width: 65%;
+    }
+    @media (min-width: @screen-xl) {
       width: 50%;
     }
   }
