--- a/views/templates/components/head.hbs
+++ b/views/templates/components/head.hbs
@@ -24,6 +24,7 @@
   
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Skåne Lag" />
-  <meta property="og:description" content="How much does culture influence creative thinking?" />
-  <meta property="og:image" content="./img/someImage.jpg" />
+  <meta property="og:description" content="For more then a thousand years the Vikings has fascinated us with their heroic deeds 
+  and mythical travels. Welcome to embark upon a journey leading you through history to the end of the Iron Age." />
+  <meta property="og:image" content="./img/wollin_line.jpg" />
 </head>
