--- a/views/less/components/video.less
+++ b/views/less/components/video.less
@@ -41,6 +41,7 @@
     background-color: @main-dark-semi-faded;
     justify-content: center;
     align-items: center;
+    left: 0;
 
     .close-video {
       height: 5rem;
