--- a/views/templates/views/reenactment.hbs
+++ b/views/templates/views/reenactment.hbs
@@ -42,13 +42,13 @@
             "url": "./img/prepare_for_battlle.jpg", 
             "heading":"Vikings",
             "text": "Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback.",
-            "css": "background-position: top left;"
+            "classes": "l-top-left"
           },
           { 
             "url": "./img/wollin.jpg", 
             "heading":"Vikings",
             "text": "Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback.",
-            "css": "background-position: top left;",
+            "classes": "l-top-left",
             "isVideo": true,
             "video-id": "oNEW4qPacGw"
           },
@@ -56,7 +56,7 @@
             "url": "./img/pray.jpg", 
             "heading":"Vikings",
             "text": "Bacon ipsum dolor amet hamburger beribs kevin fatback. Bacon ipsum dolor amet hamburger beribs kevin fatback.",
-            "css": "background-position: top left;"
+            "classes": "l-top-left"
           }
         ]}'
       }}
